Remove deprecated 'permgen' Maven profile
Building the plugin requires Java 8 since some time.
This profile therefore never gets activated.